# afplay-win

./: README.md  pyproject.toml  specs.md
afplay_win/: cli.py
tests/: test_afplay_win.py
