[project]
name = "afplay-win"
version = "0.0.1"
description = "Tiny utility that mimics 'afplay' in windows"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://github.com/sukhbinder/afplay-win"
Changelog = "https://github.com/sukhbinder/afplay-win/releases"
Issues = "https://github.com/sukhbinder/afplay-win/issues"
CI = "https://github.com/sukhbinder/afplay-win/actions"

[project.scripts]
afplay = "afplay_win.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
